# alphaghost

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  plan.md  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci.yml  docs.yml
_sources/: index.rst.txt
_sources/code/: alphaghost.rst.txt  modules.rst.txt
_sources/examples/: alphaghost.ipynb.txt  play_against_bot.ipynb.txt
alphaghost/: __init__.py  __main__.py  alphaghost.py  alphazero.py  mcts.py  model.py  parsers.py  phantom_go.py
code/: alphaghost.html  modules.html
demo/src/views/: HomeView.vue
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/examples/: alphaghost.ipynb
docs/source/examples/checkpoints/: config.json  learner.jsonl  log-actor-0.txt  log-actor-1.txt  log-evaluator-0.txt  log-learner.txt  model_step_-1.pth  model_step_0.pth
examples/: alphaghost.html  alphaghost.ipynb  play_against_bot.html
models/: model.pt  smoke.pt
reports/proposal/: main.tex
reports/thesis_proposal/: main.tex
runs/: optuna_smoke.db  smoke_eval.json
runs/2026-01-19_19-10-42_aztrain_seed0/: config.json  model.pt  train_metrics.jsonl
runs/2026-01-19_19-14-22_trial0000/: config.json  model.pt  train_metrics.jsonl
src/: main.py
tests/: conftest.py  test_mcts.py  test_model.py  test_parsers.py
